web/cobrands/sass/_base.scss
/* ... */
// map stuff
#map_box{
  @extend .full-width;
  background: #333;
  height: 29em;
  margin-bottom: 1em;
  overflow: hidden;
  position: relative;
  #map {
    width: 100%;
    height: 100%;
    position: relative;
  }
}

// The map's static image fallback is visible by default.
// Hide it if javascript has loaded. (We show it again when
// the page is printed.)
html.js #map .noscript {
  display: none;
}

// OpenLayers fix for navigation being top right
// Left and right so that zoom can be left, pan right.
#fms_pan_zoom {
  top: 0.5em;
  #{$left}: 0.5em;
  #{$right}: 0.5em;
}
// The left and right of the above causes the navigation to move off-screen left in IE6.
.ie6 #fms_pan_zoom {
  #{$left}: auto !important;
}

// Openlayers map controls (overrides)
#fms_pan_zoom_panup,
#fms_pan_zoom_pandown,
#fms_pan_zoom_panleft,
#fms_pan_zoom_panright,
#fms_pan_zoom_zoomin,
#fms_pan_zoom_zoomout {
  width: 36px;
  height: 36px;
  text-indent: flip(-999999px, 999999px); // text-align from OL style makes this necessary
  background: url($image-sprite) no-repeat;
  filter: none !important; // Override OpenLayers PNG handling of the navigation
}

#fms_pan_zoom_zoomworld {
  display: none !important;
  visibility: none !important;
}

#fms_pan_zoom_panup {
  background-position: -42px -222px;
  #{$right}: 30px;
  #{$left}: auto;
  top: 0;
}
#fms_pan_zoom_pandown {
  background-position: -42px -282px;
  #{$right}: 30px;
  #{$left}: auto;
  top: 72px;
}
#fms_pan_zoom_panleft {
  background-position: -12px -252px;
  width: 48px;
  #{$right}: flip(48px, 0);
  #{$left}: auto;
  top: 36px;
}
#fms_pan_zoom_panright {
  background-position: -60px -252px;
  width: 48px;
  #{$right}: flip(0, 48px);
  #{$left}: auto;
  top: 36px;
}
#fms_pan_zoom_zoomin {
  background-position: -152px -223px;
  height: 44px;
  #{$left}: 0;
  top: 0;
}
#fms_pan_zoom_zoomout {
  background-position: -152px -259px;
  height: 44px;
  #{$left}: 0;
  top: 44px;
}

//hide pins, show old reports etc
#sub_map_links {
  position: absolute;
  #{$left}: 0;
  #{$right}: 0;
  bottom: 0;
  background:#333;
  background:rgba(0, 0, 0, 0.7);
  margin:0;
  a {
    @include inline-block;
    font-size:0.6875em;
    color:#fff;
    padding: flip(0.6em 3em 0.5em 1em, 0.6em 1em 0.5em 3em);
    background-repeat:no-repeat;
    &#hide_pins_link {
      background-image:url($image-sprite);
      background-position: flip(right, -341px) -3976px;
    }
    &#all_pins_link {
      background-image:url($image-sprite);
      background-position: flip(right, -337px) -4022px;
    }
    &#map_permalink {
      background-image:url($image-sprite);
      background-position: flip(right, -341px) -4070px;
    }
    &.feed {
      background-image:url($image-sprite);
      background-position: flip(right, -341px) -3936px;
    }
    &:hover {
      background-color:#000;
      text-decoration:none;
    }
  }
}

.ie6 #sub_map_links a {
  &#hide_pins_link {
    background-image:url('/cobrands/fixmystreet/images/ie_sub_map_links_sprite.gif');
    background-position: $right 1px;
  }
  &#all_pins_link {
    background-image:url('/cobrands/fixmystreet/images/ie_sub_map_links_sprite.gif');
    background-position: $right -45px;
  }
  &#map_permalink {
    background-image:url('/cobrands/fixmystreet/images/ie_sub_map_links_sprite.gif');
    background-position: $right -93px;
  }
}

#mob_sub_map_links {
  position: absolute;
  bottom:0;
  display:table;
  margin:0;
  width:100%;
  background:rgba(0, 0, 0, 0.7);
  a {
    color:#fff;
    width:50%;
    padding:0.5em 0;
    font-size:1em;
    display:table-cell;
    text-align:center;
    &:hover {
      background:#000;
      text-decoration:none;
    }
  }
  &.map_complete {
    height: 100%;
    background: none;
    display: block;
    border-bottom: 4px solid #fff;
    a#try_again {
      position: absolute;
      display: block;
      left: 25%; // along with width of 50%, centres it
      bottom: 0;
      margin-bottom: 6em;
      background: rgba(0, 0, 0, 0.8);
      @include border-radius(0.5em);
    }
    a#mob_ok {
      position: absolute;
      display: block;
      #{$right}: 1em;
      bottom: 0;
      height: 20px;
      padding-top: 30px;
      width: 4em;
      background: #fff url($image-sprite) 12px -4140px no-repeat;
      color: #000;
    }
  }
}

.mobile-map-banner {
  margin:0;
  position: absolute;
  top:0;
  #{$left}: 0;
  #{$right}: 0;
  font-size:0.75em;
  background:rgba(0, 0, 0, 0.7);
  padding:0.75em 30px;
  a {
    @include button-reset(#333, #1a1a1a, #1a1a1a, #fff, #333, #1a1a1a, #1a1a1a, #fff);
    font: {
      weight:normal;
      size:0.875em;
    }
    line-height:1;
    padding:0.5em 0.75em;
    position:absolute;
    #{$left}: 0.3em;
    top:0.3em;
  }
}

.olControlAttribution {
    bottom: 3.25em !important;
    #{$right}: 0.25em !important;
    #{$left}: 0.25em !important;
    color: #222222;
    font-size:0.75em !important;
}
.olControlAttribution img {
    vertical-align: bottom;
}
.olControlPermalink {
    bottom: 3px !important;
    #{$right}: 3px;
}

/* Drag is only present in noscript form. XXX Copy from core. */
#drag {
    input, img {
        position: absolute;
        border: none;
        max-width: none;
    }
    input {
        cursor: crosshair;
        background-color: #cccccc;
    }
    img {
        cursor: move;
    }
    img.pin {
        z-index: 100;
        background-color: inherit;
    }
    a img.pin {
        cursor: pointer;
        cursor: hand;
    }
}

// only on mobile, this is a sidebar on desk (#report-a-problem-sidebar)
a.rap-notes-trigger,
a:hover.rap-notes-trigger {
  display:block;
  width:90%;
  padding-#{$left}: 5%;
  padding-#{$right}: 5%;
}
.rap-notes {
  margin:1em 0;
}
/* ... */

